--- a/arch/arm/configs/say_defconfig
+++ b/arch/arm/configs/say_defconfig
@@ -216,6 +216,7 @@ CONFIG_EFI_PARTITION=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
@@ -223,6 +224,7 @@ CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_FIOPS is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
@@ -1904,7 +1906,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_RMI4_I2C is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT1664S is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT1188S is not set
-# CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4 is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
 # CONFIG_TOUCHSCREEN_TOUCHWIN is not set
 # CONFIG_TOUCHSCREEN_PIXCIR is not set
@@ -1931,7 +1932,6 @@ CONFIG_EPEN_WACOM_G9PM=y
 # CONFIG_TOUCHSCREEN_IST30XX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI_S5000 is not set
 # CONFIG_TOUCHSCREEN_CYTTSP5 is not set
-CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP4_I2C=y
 CONFIG_INPUT_WACOM_HL=y
 # CONFIG_EPEN_WACOM_G9PL is not set
 # CONFIG_EPEN_WACOM_G9PLL is not set
@@ -4166,6 +4166,7 @@ CONFIG_PID_IN_CONTEXTIDR=y
 # Samsung Rooting Restriction Feature
 #
 # CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_RESTART_REASON_DDR is not set
 
 #
 # Security options
